# Haskell-svm1

./: .gitignore  README.md  stack.yaml
example/: 001.s1s  002.s1s  003.s1s  004.s1s  005.s1s  README.md
lib/: lib.cabal
lib/src/Lib/: parser.hs  parserHelper.hs
lib/test/: doctest.hs
s1s-compiler/: s1s-compiler.cabal
s1s-compiler/src/S1s/: Compiler.hs  CompilerHelper.hs  Parser.hs  SyntaxTree.hs
s1s-compiler/test/: doctest.hs
svm/: svm.cabal
svm/src/SVM/: Machine.hs  Stack.hs
svm/test/: doctest.hs
test/: test.cabal
test/src/: main.hs
