cabal-version: 3.0
name: lib
version: 0.1.0.0
build-type: Simple

library
    hs-source-dirs: src
    exposed-modules: Lib.Parser
                   , Lib.ParserHelper
    build-depends: base >= 4.7 && < 5
                 , bytestring
    default-language: Haskell2010

Test-Suite doctest
    type: exitcode-stdio-1.0
    main-is: doctest.hs
    hs-source-dirs: test
    build-depends: doctest >= 0.20.0
                 , base >= 4.7 && < 5
    default-language: Haskell2010
