cabal-version: 3.0
name: s1s-compiler
version: 0.1.0.0
description: compile s1s language src file to binary file for svm1.
build-type: Simple

library
    hs-source-dirs: src
    exposed-modules: S1s.Compiler
    other-modules: S1s.CompilerHelper
                 , S1s.SyntaxTree
                 , S1s.Parser
    build-depends: base >= 4.7 && < 5
                 , bytestring
                 , lib
    default-language: Haskell2010

Test-Suite doctest
    type: exitcode-stdio-1.0
    main-is: doctest.hs
    hs-source-dirs: test
    build-depends: doctest >= 0.20.0
                 , base >= 4.7 && < 5
                 , lib
    default-language: Haskell2010
