cabal-version: 3.0
name: svm
version: 0.1.0.0
description: sample virtual machine
build-type: Simple

library
    hs-source-dirs: src
    exposed-modules: SVM.Machine
                   , SVM.Stack
    build-depends: base >= 4.7 && < 5
                 , bytestring
    default-language: Haskell2010

Test-Suite doctest
    type: exitcode-stdio-1.0
    main-is: doctest.hs
    hs-source-dirs: test
    build-depends: doctest >= 0.20
                 , base >= 4.7 && < 5
    default-language: Haskell2010