cabal-version: 3.0
name: test
version: 0.1.0.0
build-type: Simple

Test-Suite integrationtest
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: src
    build-depends: base >= 4.7 && < 5
                 , bytestring
                 , s1s-compiler
                 , svm
    cpp-options: -DTEST
    default-language: Haskell2010
